<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView1"
            android:layout_alignRight="@id/textView1"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="13dp"
            android:src="@drawable/icon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/apk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/text_about_version"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_2" />

    <Button
        android:id="@+id/check_version_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:background="@drawable/button_style"
        android:text="检查新版本"
        android:textColor="@color/selector_bt_open_blue_white"
        android:textSize="@dimen/text_size_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dip"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/china_mobile_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/url_sc10086"
        android:textColor="@color/bule_87d0"
        android:textSize="@dimen/text_size_3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.0"
        android:gravity="center_horizontal|bottom"
        android:text="@string/app_copyright"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_2" />

</LinearLayout>